ERROR.log
 zolen@SikosoZKZ ~\....\obsidian-tab-galaxy  master  npm run dev

> obsidian-beautitab@1.6.1 dev
> node esbuild.config.mjs

file:///C:/Users/zolen/Documents/2.Informatique_Etude/Web/Projects/En_cours/obsidian-tab-galaxy/esbuild.config.mjs:7
import packageJson from "./package.json" assert { type: "json" };
                                         ^^^^^^

SyntaxError: Unexpected identifier 'assert'
    at compileSourceTextModule (node:internal/modules/esm/utils:318:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:90:18)
    at #translate (node:internal/modules/esm/loader:451:20)
    at afterLoad (node:internal/modules/esm/loader:507:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:512:12)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:555:36)
    at afterResolve (node:internal/modules/esm/loader:603:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:609:12)
    at node:internal/modules/esm/loader:628:32
    at TracingChannel.tracePromise (node:diagnostics_channel:362:14)

Node.js v24.15.0
 zolen@SikosoZKZ ~\....\obsidian-tab-galaxy  master  